Fix row align middle

--- a/asset/scss/page/page.scss
+++ b/asset/scss/page/page.scss
@@ -36,13 +36,16 @@
       margin: 0;
     }
 
-    &__body {
+    &__container {
       display: flex;
     }
 
+    &__body {
+      //display: flex;
+    }
+
     &__content {
-      width: 100%;
-      height: 100%;
+      //
     }
   }
 
